--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -11,3 +11,9 @@ services:
       - "3306:3306"
     volumes:
       - ./.docker/mysql_data:/var/lib/mysql
+    networks:
+      - fivemanage
+
+networks:
+  fivemanage:
+    driver: bridge
