--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -13,6 +13,15 @@ services:
       - ./.docker/mysql_data:/var/lib/mysql
     networks:
       - fivemanage
+  jaeger:
+    image: jaegertracing/jaeger:2.4.0 
+    container_name: jaeger
+    ports:
+      - "16686:16686"
+      - "4317:4317"
+      - "4318:4318"
+      - "5778:5778"
+      - "9411:9411"
 
 networks:
   fivemanage:
