--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -23,9 +23,8 @@ jobs:
 
       # Drafts your next Release notes as Pull Requests are merged into "master"
       - uses: release-drafter/release-drafter@v6
-        # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
         with:
-          config-name: my-config.yml
+          config-name: release-drafter.yml
           prerelease: true
           publish: true
           prerelease-identifier: 'beta'
