--- a/.air.toml
+++ b/.air.toml
@@ -3,7 +3,7 @@ testdata_dir = "testdata"
 tmp_dir = "tmp"
 
 [build]
-  args_bin = ["run"]
+  args_bin = []
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main ./cmd/lite/lite.go"
   delay = 0
