--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.59.15",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.0",
@@ -28,9 +29,10 @@
     "lucide-react": "^0.428.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.1.5",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
@@ -47,7 +49,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.6",
+    "tw-animate-css": "^1.3.0",
     "typescript": "^5.5.3",
     "vite": "^6.1.0"
   }
