--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -16,16 +16,18 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-      # (Optional) GitHub Enterprise requires GHE_HOST variable set
-      #- name: Set GHE_HOST
-      #  run: |
-      #    echo "GHE_HOST=${GITHUB_SERVER_URL##https:\/\/}" >> $GITHUB_ENV
+      - uses: actions/checkout@v4
+      - name: Bump version and push tag
+        id: bump_version
+        uses: hennejg/github-tag-action@v4.3.1
+        with:
+          dry_run: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
-      # Drafts your next Release notes as Pull Requests are merged into "master"
       - uses: release-drafter/release-drafter@v6
         with:
-          config-name: release-drafter.yml
           prerelease: true
+          tag: ${{ github.steps.bump_version.outputs.tag }}
           publish: true
           prerelease-identifier: 'beta'
         env:
