--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           fetch-depth: '0'
       - name: Bump version and push tag
-        uses: Magikon/github-tag-action@v5.0.0
+        uses: Magikon/github-tag-action@5.0.0
         id: tag
         env:
           PREFIX: dev
