fix(ci): prelease test

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -22,6 +22,7 @@ jobs:
         uses: Magikon/github-tag-action@5.0.0
         id: tag
         env:
+          RELEASE_BRANCHES: master
           PREFIX: dev
           PRERELEASE_SUFFIX: beta
           MAJOR: "BREAKING*CHANGE|*#major*"
