--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -23,7 +23,6 @@ jobs:
         id: tag
         env:
           RELEASE_BRANCHES: master
-          PREFIX: dev
           PRERELEASE_SUFFIX: beta
           MAJOR: "BREAKING*CHANGE|*#major*"
           MINOR: "*feat*|*#minor*"
@@ -32,6 +31,7 @@ jobs:
       - uses: release-drafter/release-drafter@v6
         with:
           config-name: release-drafter.yml
+          name: 'Nightly Release ${{ steps.tag.outputs.new_tag }}'
           tag: ${{ steps.tag.outputs.new_tag }}
           version: ${{ steps.tag.outputs.new_tag }}
           prerelease: true
