--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -8,16 +8,34 @@ on:
 permissions:
   contents: read
 
+env:
+  dockerImage: 'fivemanage/lite'
+
 jobs:
   update_release_draft:
     permissions:
       contents: write
       pull-requests: write
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: '0'
+
+      # Docker stuff
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Bump version and push tag
         uses: Magikon/github-tag-action@5.0.0
         id: tag
@@ -27,6 +45,19 @@ jobs:
           MAJOR: "BREAKING*CHANGE|*#major*"
           MINOR: "*feat*|*#minor*"
           PATCH: "*fix*|*chore*|*docs*|*update*|#patch"
+
+      # more docker stuff
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          file: ./build/package/Dockerfile
+          platforms:
+            - linux/amd64
+            - linux/arm64
+          push: true
+          tags: |
+            ${{ env.dockerImage }}:latest
+            ${{ env.dockerImage }}:${{ steps.tag.outputs.new_tag }}
 
       - uses: release-drafter/release-drafter@v6
         with:
