feat(ci/docker): annotations

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -12,7 +12,7 @@ env:
   dockerImage: 'fivemanage/lite'
 
 jobs:
-  update_release_draft:
+  release_nightly:
     permissions:
       contents: write
       pull-requests: write
@@ -36,6 +36,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+
       - name: Bump version and push tag
         uses: Magikon/github-tag-action@5.0.0
         id: tag
@@ -46,6 +47,12 @@ jobs:
           MINOR: "*feat*|*#minor*"
           PATCH: "*fix*|*chore*|*docs*|*update*|#patch"
 
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.dockerImage }}
+
       # more docker stuff
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
@@ -53,6 +60,7 @@ jobs:
           file: ./build/package/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
+          annotations: ${{ steps.meta.outputs.annotations }}
           tags: |
             ${{ env.dockerImage }}:${{ steps.tag.outputs.new_tag }}
 
