--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -58,7 +58,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           file: ./build/package/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           annotations: ${{ steps.meta.outputs.annotations }}
           tags: |
