ci(prerelease): create annotations

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -57,6 +57,8 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.dockerImage }}
+        env:
+          DOCKER_METADATA_ANNOTATIONS_LEVELS: manifest,index
 
       # more docker stuff
       - name: Build and push Docker image
