--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -66,7 +66,9 @@ jobs:
         with:
           file: ./build/package/Dockerfile
           platforms: linux/amd64
+          sbom: true
           push: true
+          provenance: mode=max
           annotations: ${{ steps.meta.outputs.annotations }}
           tags: |
             ${{ env.dockerImage }}:${{ steps.tag.outputs.new_tag }}
