--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -65,7 +65,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           file: ./build/package/Dockerfile
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           sbom: true
           push: true
           provenance: mode=max
