--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,8 +9,11 @@ on:
 jobs:
   lint_frontend:
     name: Lint frontend
-    working-directory: web 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: web 
+
     strategy:
       matrix:
         node-version: [22]
