fix(logs): kafka & clickhouse connections

--- a/.env.template
+++ b/.env.template
@@ -8,4 +8,9 @@ AWS_ENDPOINT=
 AWS_BUCKET=fivemanage-lite
 AWS_REGION=auto
 
+CLICKHOUSE_HOST=localhost:19000
+CLICKHOUSE_DATABASE=default
+CLICKHOUSE_USERNAME=default
+CLICKHOUSE_PASSWORD=password
+
 VERSION=dev
