chore: update readme & env.template

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,7 @@
 ADMIN_PASSWORD=password
-DB_DRIVER=mysql
-DSN="root:root@tcp(localhost:3306)/fivemanage-lite-dev"
+DSN=postgres://postgres:root@localhost:5432/fivemanage-lite-dev?sslmode=disable
+
+API_TOKEN_HMAC_SECRET=<32 bytes secret>
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -13,4 +14,5 @@ CLICKHOUSE_DATABASE=default
 CLICKHOUSE_USERNAME=default
 CLICKHOUSE_PASSWORD=password
 
-VERSION=dev
+VERSION=dev # dev only
+ENV=dev # dev only
