--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -1,9 +1,9 @@
 name: "Fivemanage Lite"
 
 services:
-  database:
+  lite-database:
     image: postgres:latest
-    container_name: lite_database
+    container_name: lite-database
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: root
@@ -23,10 +23,10 @@ services:
       - "4318:4318"
       - "5778:5778"
       - "9411:9411"
-  clickhouse:
+  lite-clickhouse:
     image: clickhouse/clickhouse-server:latest
     restart: always
-    container_name: clickhouse
+    container_name: lite-clickhouse
     environment:
       CLICKHOUSE_PASSWORD: password
     ports:
