--- a/web/package.json
+++ b/web/package.json
@@ -44,6 +44,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-router": "^7.6.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.0.0"
