Add MinIO to the docker compose and .env.template (#74)

--- a/.env.template
+++ b/.env.template
@@ -3,11 +3,11 @@ DSN=postgres://postgres:root@localhost:5432/fivemanage-lite-dev?sslmode=disable
 
 API_TOKEN_HMAC_SECRET=<32 bytes secret>
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_ENDPOINT=
-AWS_BUCKET=fivemanage-lite
-AWS_REGION=auto
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin123
+AWS_ENDPOINT=http://localhost:9000
+AWS_BUCKET=dev-bucket
+AWS_REGION=eu-west-1
 
 CLICKHOUSE_HOST=localhost:19000
 CLICKHOUSE_DATABASE=default
