--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -51,6 +51,20 @@ services:
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
     volumes:
       - ./.docker/kafka/data:/bitnami/kafka
+  minio:
+    image: minio/minio:latest
+    container_name: minio
+    ports:
+      - "9000:9000" 
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin123
+    command: server /data --console-address ":9001"
+    volumes:
+      - ./.docker/minio/data:/data
+    networks:
+      - fivemanage
 
 networks:
   fivemanage:
