some logger stuff, minio support

--- a/.env.template
+++ b/.env.template
@@ -3,10 +3,11 @@ DSN=postgres://postgres:root@localhost:5432/fivemanage-lite-dev?sslmode=disable
 
 API_TOKEN_HMAC_SECRET=<32 bytes secret>
 
+S3_PROVIDER=minio # minio, r2, s3
 AWS_ACCESS_KEY_ID=minioadmin
 AWS_SECRET_ACCESS_KEY=minioadmin123
 AWS_ENDPOINT=http://localhost:9000
-AWS_BUCKET=dev-bucket
+AWS_BUCKET=lite-dev
 AWS_REGION=eu-west-1
 
 CLICKHOUSE_HOST=localhost:19000
