--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - ./.docker/postgres_data:/var/lib/postgresql/data
     networks:
       - fivemanage
-  jaeger:
+  lite-jaeger:
     image: jaegertracing/jaeger:2.4.0 
     container_name: jaeger
     ports:
@@ -34,8 +34,11 @@ services:
       - '19000:9000'
     volumes:
       - clickhouse-data:/var/lib/clickhouse/
-  kafka:
+    networks:
+      - fivemanage
+  lite-kafka:
     image: bitnami/kafka:4.0.0
+    container_name: lite-kafka
     ports:
       - '9092:9092'
       - '9093:9093'
@@ -44,16 +47,18 @@ services:
       - KAFKA_CFG_NODE_ID=0
       - KAFKA_CFG_PROCESS_ROLES=controller,broker
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://lite-kafka:9092,EXTERNAL://localhost:9094
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@lite-kafka:9093
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
     volumes:
-      - ./.docker/kafka/data:/bitnami/kafka
-  minio:
+      - ./.docker/kafka:/bitnami/kafka
+    networks:
+      - fivemanage
+  lite-minio:
     image: minio/minio:latest
-    container_name: minio
+    container_name: lite-minio
     ports:
       - "9000:9000" 
       - "9001:9001"
