--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@base-ui/react": "^1.0.0",
     "@date-fns/utc": "^2.1.0",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -72,8 +73,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.1.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^4.1.7",
-    "tw-animate-css": "^1.3.0",
+    "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.32.1",
     "vite": "^6.1.0"
