--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -73,6 +73,8 @@ jobs:
           annotations: ${{ steps.meta.outputs.annotations }}
           tags: |
             ${{ env.dockerImage }}:${{ steps.tag.outputs.new_tag }}
+          build-args: |
+            LITE_VERSION=${{ steps.tag.outputs.new_tag }}
 
       - uses: release-drafter/release-drafter@v6
         with:
