--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -11,7 +11,7 @@ permissions:
   contents: read
 
 env:
-  dockerImage: 'fivemanage/lite'
+  dockerImage: 'ghcr.io/fivemanage/lite'
 
 jobs:
   release_nightly:
@@ -19,6 +19,9 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
+      packages: write
+      id-token: write
+      attestations: write
     runs-on: ubuntu-latest
 
     steps:
@@ -27,7 +30,7 @@ jobs:
           fetch-depth: '0'
 
       # Docker stuff
-      - name: Login to Docker Hub
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
