--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -1,11 +1,7 @@
 name: Pre Release
 
 on:
-  pull_request:
-    types: 
-      - closed
-    branches:
-      - develop
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -15,7 +11,7 @@ env:
 
 jobs:
   release_nightly:
-    if: github.event.pull_request.merged == true
+    #if: github.event.pull_request.merged == true
     permissions:
       contents: write
       pull-requests: write
