--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -72,6 +72,7 @@ jobs:
           annotations: ${{ steps.meta.outputs.annotations }}
           tags: |
             ${{ env.dockerImage }}:${{ steps.tag.outputs.new_tag }}
+            ${{ env.dockerImage }}:latest
           build-args: |
             LITE_VERSION=${{ steps.tag.outputs.new_tag }}
 
