--- a/.env.template
+++ b/.env.template
@@ -9,6 +9,7 @@ AWS_SECRET_ACCESS_KEY=minioadmin123
 AWS_ENDPOINT=http://localhost:9000
 AWS_BUCKET=lite-dev
 AWS_REGION=eu-west-1
+BUCKET_DOMAIN=http://localhost:9000/lite-dev
 
 CLICKHOUSE_HOST=localhost:19000
 CLICKHOUSE_DATABASE=default
