--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --watch",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:api": "npx swagger2openapi ../docs/swagger.json --outfile ../docs/openapi.json && openapi-typescript ../docs/openapi.json -o ./src/lib/api/v1.d.ts"
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
@@ -41,6 +42,8 @@
     "jotai": "^2.12.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.428.0",
+    "openapi-fetch": "^0.15.0",
+    "openapi-react-query": "^0.5.1",
     "react": "^19.0.0",
     "react-autosuggest": "10.1.0",
     "react-day-picker": "^9.8.0",
@@ -72,6 +75,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.1.0",
+    "openapi-typescript": "^7.10.1",
+    "orval": "^8.0.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
